Trying to fix broken images

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <li><a href="#">Contacts</a></li>
     </ul>
 </div>
-    <img src="/images/Asset17.svg" class="hexgon" id="hexgon">
-    <img src="/images/Asset18.svg" class="purple-circle" id="purple-circle">
-    <img src="/images/Asset19.svg" class="line-circle" id="line-circle">
-    <img src="/images/Asset20.svg" class="shadow" id="shadow"> 
-    <img src="/images/Asset21.svg" class="bg" id="shadow">
+    <img src="images/Asset17.svg" class="hexgon" id="hexgon">
+    <img src="images/Asset18.svg" class="purple-circle" id="purple-circle">
+    <img src="images/Asset19.svg" class="line-circle" id="line-circle">
+    <img src="images/Asset20.svg" class="shadow" id="shadow"> 
+    <img src="images/Asset21.svg" class="bg" id="shadow">
 
 <article class="text">
     <h1 class="h1-text">Portfilio</h1>
