Trying to fix broken images

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     
     <div class="row">
         <div class="column-1">
-            <img src="/images/Moon-Girl-&-Devil-Dinosaur.jpg">
-            <img src="/images/crystal-ball-ballerina.jpg">
-            <img src="/images/chocolate-ballernia.jpg">
-            <img src="/images/preworkout.jpg">
-            <img src="/images/the-swimmer.jpg">
-            <img src="/images/yoga_pose.jpg">
+            <img src="images/Moon-Girl-&-Devil-Dinosaur.jpg">
+            <img src="images/crystal-ball-ballerina.jpg">
+            <img src="images/chocolate-ballernia.jpg">
+            <img src="images/preworkout.jpg">
+            <img src="images/the-swimmer.jpg">
+            <img src="images/yoga_pose.jpg">
         </div>
     </div> 
     </article>
