--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="images/18.svg" class="purple-circle" id="purple-circle">
     <img src="images/19.svg" class="line-circle" id="line-circle">
     <img src="images/20.svg" class="shadow" id="shadow"> 
-    <img src="images/21.svg" class="bg" id="shadow">
+    <img src="images/21.svg" class="bg" id="bg">
 
 <article class="text">
     <h1 class="h1-text">Portfilio</h1>
